k8s/apps/ephermal-notes-api/overlays/staging/httproute-patch.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-ephermal-notes-api
spec:
  parentRefs:
    - name: homelab-gw
      namespace: staging-networking
      sectionName: https
  hostnames:
    - notes.10-96-11-221.sslip.io
